fix: normalize merchant _id in loadMerchants (real merchants use id not _id)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1634,7 +1634,7 @@ async function initConsumerPage(qrMerchantId, qrTable) {
 async function loadMerchants() {
   try {
     const data = await apiCall(`${API_BASE}/merchants/nearby?lat=${DEFAULT_CENTER.lat}&lng=${DEFAULT_CENTER.lng}&radius=${DEFAULT_RADIUS}`);
-    allMerchants = Array.isArray(data) ? data : (data.merchants || []);
+    allMerchants = (Array.isArray(data) ? data : (data.merchants || [])).map(m => ({ ...m, _id: m._id || m.id }));
   } catch (e) {
     console.warn('API failed, using mock data', e);
     allMerchants = getMockMerchants();
