--- a/frontend/merchant.html
+++ b/frontend/merchant.html
@@ -3010,9 +3010,10 @@
             sseConnection.close();
             sseConnection = null;
         }
-        // 清空登录表单
+        // 清空登录表单（安全考虑）
         document.getElementById('loginPhone').value = '';
         document.getElementById('loginPassword').value = '';
+        document.getElementById('loginErr') && (document.getElementById('loginErr').textContent = '');
         // 重置 createStoreSection 为隐藏状态
         document.getElementById('createStoreSection').style.display = 'none';
         toast(t('logout_success'), 'info');
