--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1912,8 +1912,8 @@ body {
   <!-- ===== FULL MAP VIEW ===== -->
   <div class="full-map-wrap" id="fullMapWrap">
     <div id="full-map"></div>
-    <button onclick="switchContentTab('recommend')" style="position:fixed;top:16px;right:16px;z-index:450;width:40px;height:40px;border-radius:50%;border:none;background:white;box-shadow:0 2px 8px rgba(0,0,0,0.3);font-size:20px;cursor:pointer;display:flex;align-items:center;justify-content:center;">✕</button>
-    <button onclick="switchContentTab('recommend')" style="position:fixed;bottom:86px;left:50%;transform:translateX(-50%);z-index:450;padding:8px 24px;border-radius:20px;border:none;background:white;box-shadow:0 2px 8px rgba(0,0,0,0.3);font-size:14px;font-weight:600;cursor:pointer;color:#333;">收起地图</button>
+    <button onclick="switchContentTab('recommend');switchBottomTab('home');window.scrollTo(0,0)" style="position:fixed;top:16px;right:16px;z-index:450;width:40px;height:40px;border-radius:50%;border:none;background:white;box-shadow:0 2px 8px rgba(0,0,0,0.3);font-size:20px;cursor:pointer;display:flex;align-items:center;justify-content:center;">✕</button>
+    <button onclick="switchContentTab('recommend');switchBottomTab('home');window.scrollTo(0,0)" style="position:fixed;bottom:86px;left:50%;transform:translateX(-50%);z-index:450;padding:8px 24px;border-radius:20px;border:none;background:white;box-shadow:0 2px 8px rgba(0,0,0,0.3);font-size:14px;font-weight:600;cursor:pointer;color:#333;">收起地图</button>
   </div>
 
   <!-- ===== DISCOVER PAGE (placeholder) ===== -->
@@ -2990,7 +2990,7 @@ async function toggleFollow(merchantId) {
     const method = isFollowed ? 'DELETE' : 'POST';
     await apiCall(`${API_BASE}/merchants/${merchantId}/follow`, { method });
     showToast(isFollowed ? '已取消关注' : '关注成功 ✓', 'success');
-    await loadFollowStatus(merchantId);
+    loadFollowStatus(merchantId);
     // Update follower count optimistically
     const cntEl = document.getElementById(`follow-count-${merchantId}`);
     if (cntEl) {
